[package]
name = "sp-mvm"
authors = ["Pontem Network Team <https://pontem.network>"]
description = "FRAME pallet adding Move-lang support."
edition = "2018"
repository = "https://github.com/pontem-network/sp-move"
version = "0.3.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies.log]
version = "0.4"
default-features = false

[dependencies.codec]
version = "2.0.0"
default-features = false
features = ["derive"]
package = "parity-scale-codec"


# Move, addition deps for addrs & results:

[dependencies.move-vm]
package = "mvm"
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "1c94891be56ec67eb04a8d1bd21775219d526f48"
default-features = false

[dependencies.vm]
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "1c94891be56ec67eb04a8d1bd21775219d526f48"
default-features = false

[dependencies.move-vm-runtime]
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "1c94891be56ec67eb04a8d1bd21775219d526f48"
default-features = false

[dependencies.move-core-types]
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "1c94891be56ec67eb04a8d1bd21775219d526f48"
default-features = false

[dependencies.move-vm-types]
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "1c94891be56ec67eb04a8d1bd21775219d526f48"
default-features = false

[dependencies]
once_cell = { default-features = false, version = "1.5.2" }
# substrate:
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
timestamp = { default-features = false, package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
balances = { default-features = false, package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
# logging, `sp_runtime::print`:
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

# serde is for lcs/bcs only
# used for benchmarking (runtime, std, no-std)
serde-alt = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"], optional = true }
[dependencies.bcs-alt]
package = "bcs"
default-features = false
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "1c94891be56ec67eb04a8d1bd21775219d526f48"
optional = true


[dev-dependencies]
# serde is for lcs/bcs and construct_runtime
# used for tests (std) only
serde = { package = "serde", version = "1.0.119" }
bcs = { package = "bcs", version = "0.1" }


[features]
default = [
    "std",
]
no-vm-static = []
std = [
    "log/std",
    "once_cell/std",
    "vm/std",
    "move-vm/std",
    "move-vm-runtime/std",
    "move-core-types/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "move-vm-types/std",
    "timestamp/std",
    "balances/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "timestamp/runtime-benchmarks",
    "balances/runtime-benchmarks",

    "serde-alt",
    "bcs-alt",
]

# Note: frame-support `try-runtime` feature is released after v3.
# Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
