[package]
name = "sp-mvm"
authors = ["Pontem Network Team <https://pontem.network>"]
description = "FRAME pallet adding Move-lang support."
edition = "2021"
repository = "https://github.com/pontem-network/pontem"
version = "0.3.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies.log]
version = "0.4"
default-features = false

[dependencies.parity-scale-codec]
version = "3.0.0"
default-features = false
package = "parity-scale-codec"

[dependencies.parity-scale-codec-derive]
version = "3.0.0"
default-features = false
package = "parity-scale-codec-derive"

# Move, addition deps for addrs & results:

[dependencies.move-vm]
package = "mvm"
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "c922f60b747bfba0d0f01ab77bd3091d3e43454c"
default-features = false
features = [ "move_stdlib" ]

[dependencies.move-core-types]
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "c922f60b747bfba0d0f01ab77bd3091d3e43454c"
default-features = false


[dependencies]
anyhow = { version = "1.0.43", default-features = false }
serde = { version = "1.0", optional = true }
once_cell = { default-features = false, version = "1.5.2" }
# substrate:
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
timestamp = { default-features = false, package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
balances = { default-features = false, package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
# logging, `sp_runtime::print`:
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
groupsign = { path = "../groupsign", default-features = false }

sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
getrandom = { version = "0.2.3", optional = true }

# Orml
orml-traits = { default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library', rev = '2b5d4ce1d08fb54c0007c2055653892d2c93a92e' }

# serde is for lcs/bcs only
# used for benchmarking (runtime, std, no-std)
serde-alt = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"], optional = true }

[dependencies.bcs-alt]
package = "bcs"
default-features = false
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "c922f60b747bfba0d0f01ab77bd3091d3e43454c"
optional = true

[dev-dependencies]
# serde is for lcs/bcs and construct_runtime
# used for tests (std) only
pallet-vesting = { default-features = false, package = "pallet-vesting", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
primitives = { path = "../../primitives" }
assets = { path = "../../assets" }
constants = { path = "../../constants" }
module-currencies = { path = "../currencies" }
orml-tokens = { default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library', rev = '2b5d4ce1d08fb54c0007c2055653892d2c93a92e' }
orml-currencies = { default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library', rev = '2b5d4ce1d08fb54c0007c2055653892d2c93a92e' }
serde = { package = "serde", version = "1.0" }
bcs = { package = "bcs", version = "0.1" }
env_logger = "0.9.0"
test-log = "0.2.8"

[dev-dependencies.move-vm-runtime]
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "c922f60b747bfba0d0f01ab77bd3091d3e43454c"
default-features = false

[features]
default = [
    "std",
]
std = [
    "serde",
    "log/std",
    "assets/std",
    "move-vm/std",
    "move-vm-runtime/std",
    "move-core-types/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "parity-scale-codec/std",
    "groupsign/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "timestamp/std",
    "getrandom/js",
    "balances/std",
    "orml-traits/std",
    "pallet-vesting/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "timestamp/runtime-benchmarks",
    "balances/runtime-benchmarks",

    "serde-alt",
    "bcs-alt",
]

# Note: frame-support `try-runtime` feature is released after v3.
# Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
