[package]
name = "transaction-pause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

primitives = { default-features = false, path = "../../primitives" }

# Orml dependencies
orml-traits = { default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library', rev = '2b5d4ce1d08fb54c0007c2055653892d2c93a92e' }
orml-utilities = { default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library', rev = '2b5d4ce1d08fb54c0007c2055653892d2c93a92e' }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', rev = '2b5d4ce1d08fb54c0007c2055653892d2c93a92e' }
orml-utilities = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', rev = '2b5d4ce1d08fb54c0007c2055653892d2c93a92e' }
orml-tokens = { default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library', rev = '2b5d4ce1d08fb54c0007c2055653892d2c93a92e' }

[features]
default = ["std"]
std = [
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "scale-info/std",
    "primitives/std",
    "orml-traits/std",
    "orml-utilities/std",
    "sp-io/std",
    "sp-core/std",
    "codec/std",
]
