[package]
name = 'groupsign-canned-benchmarks'
version = "0.0.1"
description = "Generator for pre-signed benchmarking test cases."
authors = ['Pontem Network']
edition = '2021'
license = "GPL-v3.0"
publish = false
repository = "https://github.com/pontem-network/pontem"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', features = ["full_crypto"] }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', features = ["std"] }
codec = { package = "parity-scale-codec", version = "2.3.1", features = ["derive"] }
scale-info = { version = "1.0" }
