[package]
name = "sp-mvm-rpc-runtime"
authors = [ "Pontem Network Team <https://pontem.network>" ]
description = "Runtime RPC for Move pallet."
edition = "2021"
repository = "https://github.com/pontem-network/pontem"
version = "0.2.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-api = { default-features = false, version = '4.0.0-dev', git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-mvm = { default-features = false, path = "../../" }
sp-runtime = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
# TODO: update parity-scale-codec to 2.2.0
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-api/std",
	"frame-support/std",
]
